[tool.poetry]
name = "oaqjp-final-project-emb-ai"
version = "0.1.0"
description = ""
authors = ["wansu27 <ridwan.setiawan@shippit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
flask = "2.2.2"
werkzeug = "2.2.2"
urllib3 = "1.26.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
